# CS-330-ShowcaseApp2

./: .gitignore  .gitmodules  CMakeLists.txt  CS330-ShowcaseApp.sln  Max Gilhespy CS-330 Project Reflection.docx  README.md
CS330-ShowcaseApp/: CMakeLists.txt  CS330-ShowcaseApp.vcxproj  CS330-ShowcaseApp.vcxproj.filters
CS330-ShowcaseApp/assets/shaders/: basic_lit.frag  basic_lit.vert  basic_lit_texture.frag  basic_lit_texture.vert  basic_shader.frag  basic_shader.vert  basic_unlit_color.frag  basic_unlit_color.vert  debug_buc.frag  debug_buc.vert
CS330-ShowcaseApp/include/: application.h  camera.h  cat_area.h  game_object.h  light.h  material.h  mesh.h  model.h  shader.h  shapes.h  texture.h  types.h
CS330-ShowcaseApp/shaders/: basic_shader.frag  basic_shader.vert
CS330-ShowcaseApp/src/: application.cpp  camera.cpp  cat_area.cpp  game_object.cpp  light.cpp  main.cpp  mesh.cpp  model.cpp  shader.cpp  texture.cpp
